closed download cycle.... moved responsibility to electron now.with translation

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Не, не изтривай",
   "domain": "домейн",
   "download": "Изтегли",
+  "download_started": "Изтеглянето започна",
   "downloaded": "Изтеглено",
   "downloaded_hash": "Изтеглени хеш",
   "downloaded_volume": "Изтеглен обем",
   "downloading_blockchain": "Изтегляне на блокверигата",
+  "downloading_update": "Актуализацията се изтегля. Ще бъдете информирани, след като приключи.",
   "drop_update": "Прехвърлете тук обновяването на клиента (zip файл), когато изтеглянето приключи, или щракнете за избор.",
   "edit": "Редактиране",
   "effective_balance": "Ефективно салдо",
