--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -208,10 +208,12 @@
   "do_not_delete": "No, No Eliminar",
   "domain": "Domini",
   "download": "descarregar",
+  "download_started": "La descàrrega es va iniciar",
   "downloaded": "Descarregat",
   "downloaded_hash": "Hash Descarregat",
   "downloaded_volume": "Volum Descarregat",
   "downloading_blockchain": "Descarregant Blockchain",
+  "downloading_update": "S’ha descarregat l’actualització. Se l'informarà un cop hagi acabat.",
   "drop_update": "Arrossegui la actualització del client (el arxiu zip) aquí o cliqui per seleccionar.",
   "edit": "Editar",
   "effective_balance": "Saldo Efectiu",
