--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Ne, nemazat",
   "domain": "Doména",
   "download": "Stažení",
+  "download_started": "Stahování bylo zahájeno",
   "downloaded": " Staženo",
   "downloaded_hash": "Stažený Hash",
   "downloaded_volume": "Stažená data",
   "downloading_blockchain": "Stahuji blockchain",
+  "downloading_update": "Probíhá stahování aktualizace. Jakmile budete hotovi, budete informováni.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
   "edit": "Upravit",
   "effective_balance": "Efektivní zůstatek",
