--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Όχι, να μή διαγράφει",
   "domain": "Τομέα",
   "download": "Κατεβάστε",
+  "download_started": "Ξεκίνησε η λήψη",
   "downloaded": "Κατεβασμένο",
   "downloaded_hash": "φορτωμένα Hash",
   "downloaded_volume": "Φορτομένος όγκος",
   "downloading_blockchain": "λήψη Blockchain",
+  "downloading_update": "Η ενημέρωση γίνεται λήψη. Θα ενημερωθείτε μόλις ολοκληρωθεί.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
   "edit": "Επεξεργασία",
   "effective_balance": "διαθέσιμο ποσό",
