--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -210,10 +210,12 @@
   "do_not_delete": "No, Do Not Delete",
   "domain": "Domain",
   "download": "Download",
+  "download_started": "Download started",
   "downloaded": "Downloaded",
   "downloaded_hash": "Downloaded Hash",
   "downloaded_volume": "Downloaded Volume",
   "downloading_blockchain": "Downloading Blockchain",
+  "downloading_update": "The update is being downloaded. You'll be informed once it finished.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
   "edit": "Edit",
   "effective_balance": "Effective Balance",
