--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -208,10 +208,12 @@
   "do_not_delete": "No, No Borrar",
   "domain": "Dominio",
   "download": "Descargar",
+  "download_started": "Descarga iniciada",
   "downloaded": "Descargado",
   "downloaded_hash": "Hash Descargado",
   "downloaded_volume": "Volumen Descargado",
   "downloading_blockchain": "Descargando Cadena de Bloques",
+  "downloading_update": "La actualización se está descargando. Estarás informado una vez que haya terminado.",
   "drop_update": "Arrastre la actualización del cliente (el archivo zip) aquí o haga clic para seleccionar.",
   "edit": "Editar",
   "effective_balance": "Saldo Efectivo",
