--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Ei, älä poista",
   "domain": "verkkotunnuksen",
   "download": "ladata",
+  "download_started": "Lataa alkoi",
   "downloaded": "Ladattu",
   "downloaded_hash": "Ladattu tarkiste",
   "downloaded_volume": "Ladattu määrä",
   "downloading_blockchain": "Ladataan lohkoketjua",
+  "downloading_update": "Päivitys ladataan. Sinulle ilmoitetaan, kun se on valmis.",
   "drop_update": "Tiputa ohjelman päivitystiedosto (zip) tähän kun se on ladattu, tai klikkaa valitaksesi se.",
   "edit": "Muokkaa",
   "effective_balance": "Efektiivinen saldo",
