--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Ne pas supprimer",
   "domain": "Domaine",
   "download": "Télécharger",
+  "download_started": "Le téléchargement a commencé",
   "downloaded": "Téléchargé",
   "downloaded_hash": "Hachage téléchargé",
   "downloaded_volume": "Volume de données téléchargé",
   "downloading_blockchain": "Téléchargement de la blockchain en cours",
+  "downloading_update": "La mise à jour est en cours de téléchargement. Vous serez informé une fois terminé.",
   "drop_update": "Glissez le client à jour (fichier zip) ici lors du téléchargement ou cliquez pour sélectionner.",
   "edit": "Editer",
   "effective_balance": "Solde effectif",
