--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Non, non borrar",
   "domain": "Dominio",
   "download": "Descarga",
+  "download_started": "A descarga comezou",
   "downloaded": "Descarregado",
   "downloaded_hash": "Hash descarregado",
   "downloaded_volume": "Volume descarregado",
   "downloading_blockchain": "Descarregando a cadea de bloques",
+  "downloading_update": "A actualización está a ser descargada. Informaralle unha vez que remate.",
   "drop_update": "Arrastre a actualización do cliente (o arquivo zip) aquí ou faga clic para seleccionar.",
   "edit": "Editar",
   "effective_balance": "Saldo efectivo",
