--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -208,10 +208,12 @@
   "do_not_delete": "नहीं, मत हटाएँ",
   "domain": "डोमेन",
   "download": "डाउनलोड",
+  "download_started": "डाउनलोड शुरू किया",
   "downloaded": "डाउनलोड हो चुकी",
   "downloaded_hash": "डाउनलोड किआ गआ हैश",
   "downloaded_volume": "डाउनलोड की गई मात्रा",
   "downloading_blockchain": "Blockchain डाउनलोड हो रही है",
+  "downloading_update": "अपडेट डाउनलोड किया जा रहा है। समाप्त होने के बाद आपको सूचित किया जाएगा।",
   "drop_update": "जब क्लाइंट अपडेट (zip फाइल) डाउनलोड हो जाये तो उसे यहां छोड़ें यां चयन करने के लिए क्लिक करें।",
   "edit": "संपादित करें",
   "effective_balance": "प्रभावी शेष",
