--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Tidak, tidak menghapus",
   "domain": "Domain",
   "download": "Unduh",
+  "download_started": "Pengunduhan dimulai",
   "downloaded": "Diunduh",
   "downloaded_hash": "Hash yang telah diunduh",
   "downloaded_volume": "Volume yang telah diunduh",
   "downloading_blockchain": "Mengunduh Blockchain",
+  "downloading_update": "Pembaruan sedang diunduh. Anda akan diberi tahu setelah selesai.",
   "drop_update": "Drop update klien (file zip) di sini ketika telah diunduh atau klik untuk memilih.",
   "edit": "Mengedit",
   "effective_balance": "Keseimbangan yang efektif",
