--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -208,10 +208,12 @@
   "do_not_delete": "No, non eliminare",
   "domain": "Dominio",
   "download": "Scaricare",
+  "download_started": "Download avviato",
   "downloaded": "Scaricato",
   "downloaded_hash": "Hash scaricato",
   "downloaded_volume": "Volume scaricato",
   "downloading_blockchain": "Download Blockchain",
+  "downloading_update": "L'aggiornamento è in fase di download. Sarai informato una volta finito.",
   "drop_update": "Quando scaricato, trascina qui l'aggiornamento del client (file zip) o clicca per selezionare.",
   "edit": "Modifica",
   "effective_balance": "Saldo effettivo",
