--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -208,10 +208,12 @@
   "do_not_delete": "いいえ、削除しないでください。",
   "domain": "ドメイン",
   "download": "ダウンロード",
+  "download_started": "ダウンロード開始",
   "downloaded": "ダウンロード済み",
   "downloaded_hash": "ダウンロードされたハッシュ",
   "downloaded_volume": "ダウンロード量",
   "downloading_blockchain": "ブロックチェーンをダウンロード中",
+  "downloading_update": "更新プログラムをダウンロード中です。それが終わったらあなたは知らされるでしょう。",
   "drop_update": "クライアントのアップデート（zipファイル）をダウンロードしたら、ここにドロップするか、クリックして選択してください。",
   "edit": "編集",
   "effective_balance": "有効残高",
