--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Ne, nenaikinti",
   "domain": "Domenas",
   "download": "parsisiųsti",
+  "download_started": "Atsisiuntimas prasidėjo",
   "downloaded": "Atsisiųsta",
   "downloaded_hash": "Atsisiųstas \"hash",
   "downloaded_volume": "Atsisiųstų duomenų apimtis",
   "downloading_blockchain": "Atsisiunčiami blokai",
+  "downloading_update": "Atnaujinimas atnaujinamas. Jums bus pranešta, kai jis bus baigtas.",
   "drop_update": "Užveskite kliento atnaujinimo failą (zip failas) čia, kai atsisiųsite arba spustelėkite, kad pažymėtumėte.",
   "edit": "Redaguoti",
   "effective_balance": "Efektyvus balansas",
