--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Nee, niet verwijderen",
   "domain": "Domein",
   "download": "Download",
+  "download_started": "Downloaden is gestart",
   "downloaded": "Gedownload",
   "downloaded_hash": "Gedownloade Hash",
   "downloaded_volume": "Gedownload Volume",
   "downloading_blockchain": "Blockchain aan het downloaden",
+  "downloading_update": "De update wordt gedownload. Je wordt op de hoogte gesteld zodra het is afgelopen.",
   "drop_update": "Plaats de client update (zip-bestand) hier wanneer het gedownload is of klik om te selecteren.",
   "edit": "Bewerken",
   "effective_balance": "Effectieve saldo",
