--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Nie, nie usuwaj",
   "domain": "Domena",
   "download": "Ściągnij",
+  "download_started": "Rozpoczęto pobieranie",
   "downloaded": "Pobrany",
   "downloaded_hash": "Pobrany hash",
   "downloaded_volume": "Pobrany wolumen",
   "downloading_blockchain": "Pobieram blockchain",
+  "downloading_update": "Aktualizacja jest pobierana. Zostaniesz poinformowany po zakończeniu.",
   "drop_update": "Dodaj plik zip programu tutaj lub wybierz klikając.",
   "edit": "Edytuj",
   "effective_balance": "Efektywny balans",
