--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Não, Não Apagar",
   "domain": "Domínio",
   "download": "Baixar",
+  "download_started": "Download iniciado",
   "downloaded": "Descarregado",
   "downloaded_hash": "Hash Descarregado",
   "downloaded_volume": "Volume Descarregado",
   "downloading_blockchain": "A Descarregar a Corrente de Blocos",
+  "downloading_update": "A atualização está sendo baixada. Você será informado assim que terminar.",
   "drop_update": "Arraste a atualização do cliente (o arquivo zip) aqui ou clique para escolher.",
   "edit": "Editar",
   "effective_balance": "Saldo Efectivo",
