--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Nu, nu ştergeţi",
   "domain": "Domeniu",
   "download": "Descarca",
+  "download_started": "Descărcarea a început",
   "downloaded": "Descărcat",
   "downloaded_hash": "Hash Descarcat",
   "downloaded_volume": "Volumul Descărcat",
   "downloading_blockchain": "Descărcare Blockchain",
+  "downloading_update": "Actualizarea este descărcată. Veți fi informat după ce ați terminat.",
   "drop_update": "Glisează actualizarea clientului (fişier zip) aici când este descărcat sau fă clic pentru a selecta.",
   "edit": "Editare",
   "effective_balance": "Sold Efectiv",
