--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Нет, не удалять",
   "domain": "Домен",
   "download": "Скачать",
+  "download_started": "Загрузка началась",
   "downloaded": "Загружено",
   "downloaded_hash": "Загруженный хэш",
   "downloaded_volume": "Загруженный Объем",
   "downloading_blockchain": "Загрузка блокчейн",
+  "downloading_update": "Обновление загружается. Вы будете проинформированы, как только это закончится.",
   "drop_update": "Перетащите сюда скачанный клиент (zip файл) или нажмите для выбора.",
   "edit": "Редактировать",
   "effective_balance": "Эффективный баланс",
