--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Nemoj brisati",
   "domain": "Domena",
   "download": "Skinuti",
+  "download_started": "Preuzimanje je počelo",
   "downloaded": "Preuzeto",
   "downloaded_hash": "Preuzeti hash",
   "downloaded_volume": "Preuzeta količina",
   "downloading_blockchain": "Preuzimanje blockchaina",
+  "downloading_update": "Ažuriranje se preuzima. Bićeš obavešten kada završi.",
   "drop_update": "Nakon preuzimanje spustite ažurirani klijent (zip datoteku) ovdje ili kliknite za odabir.",
   "edit": "Uredi",
   "effective_balance": "Efektivni saldo",
