--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Nie, neodstraňovať",
   "domain": "doména",
   "download": "Stiahnuť ▼",
+  "download_started": "Spustenie preberania",
   "downloaded": "Stiahnuté",
   "downloaded_hash": "Stiahnutý Hash",
   "downloaded_volume": "Stiahnutý objem",
   "downloading_blockchain": "Blockchain sa sťahuje",
+  "downloading_update": "Aktualizácia sa práve preberá. Po dokončení budete informovaný.",
   "drop_update": "Po stiahnutí presuňte aktualizáciu klienta (zip súbor) sem, alebo kliknutím vyberte.",
   "edit": "Upraviť",
   "effective_balance": "Efektívny zostatok",
