--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Не, Немојте да Обришете",
   "domain": "Домаин",
   "download": "Преузимање",
+  "download_started": "Преузимање је почело",
   "downloaded": "Преузето",
   "downloaded_hash": "Преузет Hash",
   "downloaded_volume": "Преузета Kоличина",
   "downloading_blockchain": "Блоцкцхаин се Преузима",
+  "downloading_update": "Ажурирање се преузима. Бићеш обавештен када заврши.",
   "drop_update": "Спустите ажурирани клијент (зип фајл) овде када се заврши преузимање или кликните овде да бисте изабрали.",
   "edit": "Уредите",
   "effective_balance": "Ефективни Салдо",
