--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Hayır, silme",
   "domain": "domain",
   "download": "İndir",
+  "download_started": "",
   "downloaded": "İndirilenler",
   "downloaded_hash": "İndirilen Hash",
   "downloaded_volume": "İndirilen Hacim",
   "downloading_blockchain": "İndirilen Blockchain",
+  "downloading_update": "Güncelleme indiriliyor. Tamamlandığında size bilgi verilir.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
   "edit": "Düzenle",
   "effective_balance": "Effective bakiye",
