--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Ні, не видаляти",
   "domain": "Домен",
   "download": "Завантажити",
+  "download_started": "",
   "downloaded": "Завантажено",
   "downloaded_hash": "Звантаженій хеш",
   "downloaded_volume": "Завантажений Об'єм",
   "downloading_blockchain": "Завантаження Blockchain",
+  "downloading_update": "Оновлення завантажується. Ви будете проінформовані після завершення.",
   "drop_update": "Перетягніть сюди викачаний клієнт(zip файл) або натисніть для вибору.",
   "edit": "Редагувати",
   "effective_balance": "Ефективний баланс",
