--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -208,10 +208,12 @@
   "do_not_delete": "不，不要删除",
   "domain": "域",
   "download": "下载",
+  "download_started": "",
   "downloaded": "已下载",
   "downloaded_hash": "已下载的哈希",
   "downloaded_volume": "下载量",
   "downloading_blockchain": "正在下载Blockchain",
+  "downloading_update": "正在下载更新。一旦完成，您将收到通知。",
   "drop_update": "下载后在此更新客户端（zip 文件），或单击以选择。",
   "edit": "编辑",
   "effective_balance": "有效余额",
