--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Nein, nicht löschen",
   "domain": "Domain",
   "download": "Herunterladen",
+  "download_started": "Download gestartet",
   "downloaded": "Heruntergeladen",
   "downloaded_hash": "Heruntergeladener Hash",
   "downloaded_volume": "Heruntergeladenes Datenvolumen",
   "downloading_blockchain": "Blockchain wird heruntergeladen",
+  "downloading_update": "Das Update wird heruntergeladen. Sie werden informiert, sobald es fertig ist.",
   "drop_update": "Ziehen Sie die Client-Aktualisierung (Zip-Datei) nach dem Download hierher oder klicken Sie hier, um auszuwählen.",
   "edit": "Bearbeiten",
   "effective_balance": "Effektives Guthaben",
