--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -208,10 +208,12 @@
   "do_not_delete": "Não, Não Apagar",
   "domain": "Domínio",
   "download": "Baixar",
+  "download_started": "Download iniciado",
   "downloaded": "Baixado",
   "downloaded_hash": "Hash Baixado",
   "downloaded_volume": "Volume Baixado",
   "downloading_blockchain": "Baixando a Corrente de Blocos",
+  "downloading_update": "A atualização está sendo baixada. Você será informado assim que terminar.",
   "drop_update": "Arraste a atualização do cliente (o arquivo zip) aqui ou clique para selecionar.",
   "edit": "Editar",
   "effective_balance": "Saldo Efetivo",
