--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -208,10 +208,12 @@
   "do_not_delete": "不，不要刪除",
   "domain": "域",
   "download": "下载",
+  "download_started": "",
   "downloaded": "已下載",
   "downloaded_hash": "已下載的哈希",
   "downloaded_volume": "下載量",
   "downloading_blockchain": "正在下載 Blockchain",
+  "downloading_update": "正在下载更新。一旦完成，您将收到通知。",
   "drop_update": "下載後在此更新客戶端（zip 文件），或單擊以選擇。",
   "edit": "編輯",
   "effective_balance": "有效餘額",
