--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -749,6 +749,7 @@
   "sender_public_key": "Cheia Publică Expeditor",
   "server_error_unknown": "S-a produs o eroare necunoscută.",
   "set_account_info": "Setaţi informațiile contului",
+  "set_reward_recipient": "Set Reward Recipient",
   "settings": "Setări",
   "share_address": "Partajează Adresa",
   "show_console_log_button": "Arată butonul de logare al consolei",
