--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -737,6 +737,7 @@
     "send_message_button": "Pošaljite Poruku",
     "send_message_to_sender": "Pošaljite Poruku Pošiljaocu",
     "server_error_unknown": "Pojavila se nepoznata greška.",
+    "set_reward_recipient": "Set Reward Recipient",
     "settings": "Podešavanja",
     "set_account_info": "Postavite Informacije Naloga",
     "share_address": "Podeli Adresu",
